# reforge-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  reforge.toml
.github/workflows/: ci.yml
src/reforge_mcp/: __init__.py  server.py
src/reforge_mcp/scanner/: __init__.py  architecture.py  dead_code.py  duplicates.py  parser.py  risk.py
src/reforge_mcp/scanner/adapters/: __init__.py  golang.py  javascript.py  python.py  typescript.py
src/reforge_mcp/tools/: __init__.py  chunk.py  fix.py  git.py  scan.py
src/reforge_mcp/utils/: __init__.py  diff.py  security.py  state.py  test_runner.py
tests/: __init__.py  test_architecture.py  test_chunk.py  test_fix.py  test_git.py  test_memory.py  test_monorepo.py  test_risk.py  test_scanner.py  test_security.py
