[project]
name = "reforge-mcp"
version = "0.1.0"
description = "MCP server that automatically cleans up messy vibe-coded repositories"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.1.0",
    "tree-sitter>=0.24.0",
    "gitpython>=3.1.0",
    "sentence-transformers>=3.0.0",
    "rich>=13.0.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-go>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
reforge-mcp = "reforge_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/reforge_mcp"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
